k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-api
  ports:
    - port: 80
      targetPort: 8080
