k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  labels:
    app: ecommerce-backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecommerce-backend

  template:
    metadata:
      labels:
        app: ecommerce-backend

    spec:
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/arctic-idiom-496601-v2/ecommerce/backend:v6
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
spec:
  type: LoadBalancer

  selector:
    app: ecommerce-backend

  ports:
    - name: http
      port: 80
      targetPort: 8080
