k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: ecommerce-cert
    kubernetes.io/ingress.global-static-ip-name: ecommerce-ip
spec:
  defaultBackend:
    service:
      name: ecommerce-api
      port:
        number: 80
